--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="year_discovered">Year Discovered</string>
     <string name="density">Density</string>
     <string name="close_expanded_detail">Close Expanded Detail</string>
+    <string name="periodic_table">Periodic Table</string>
+    <string name="chemical_group_blocks">Chemical Group Blocks</string>
+    <string name="display">Display</string>
 </resources>
